legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr67984.c-4.8.2-3.out.txt
pr67984.c: In function ‘foo’:
pr67984.c:6:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int n = 0; n < N; ++n)
   ^
pr67984.c:6:3: note: use option -std=c99 or -std=gnu99 to compile your code
pr67984.c:11:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (unsigned int k = 1; k < N; ++k) {
   ^
pr67984.c:13:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int n = 0; n < N; ++n)
     ^
